# Lumina

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
Receiver/: .gitignore  CMakeLists.txt  README.md
Receiver/config/: config.h  config.json
Receiver/include/core/: Application.h  Config.h  ConfigLoader.h  DoubleBuffer.h  Frame.h  PerformanceMonitor.h  Types.h
Receiver/include/led/: LedDriver.h  WS2811Driver.h
Receiver/include/network/: Packet.h  UdpServer.h
Receiver/src/: main.cpp
Receiver/src/core/: Application.cpp  ConfigLoader.cpp  PerformanceMonitor.cpp
Receiver/src/led/: WS2811Driver.cpp
Receiver/src/network/: UdpServer.cpp
Studio/: .gitignore  README.md  REFACTORING.md  index.html  package.json
Studio/scripts/: sync-version.mjs
Studio/src/: App.tsx  index.css  main.tsx
Studio/src-tauri/: Cargo.toml  tauri.conf.json
Studio/src-tauri/icons/: icon.icns
Studio/src-tauri/src/: main.rs  menu.rs  protocol.rs  udp.rs
Studio/src/components/common/: AppHeader.tsx  ErrorBoundary.tsx  Module.tsx  ResizableSplitter.tsx  SelectionToolbar.tsx
Studio/src/components/dialogs/: AboutDialog.tsx  NewProjectDialog.tsx  PaletteManager.tsx  PiConnectionDialog.tsx  PreferencesDialog.tsx  SettingsDialog.tsx
Studio/src/components/editors/: GradientEditor.tsx  ModifiersLibrary.tsx
Studio/src/components/layout/: LayoutProvider.tsx
Studio/src/components/panels/: CanvasTimeline.tsx  EffectsLibrary.tsx  LayerPanel.tsx  PropertiesPanel.tsx  Timeline.tsx  TimelineToolbar.tsx
Studio/src/components/preview/: LEDPreview.tsx  LEDSelectionPreview.tsx
Studio/src/components/ui/: button.tsx  card.tsx  dialog.tsx  select.tsx
Studio/src/engine/: AdjustmentLayer.ts  EffectRegistry.ts  Layer.ts  ModifierRegistry.ts  RenderEngine.ts  colorUtils.ts  compositor.ts  types.ts
Studio/src/engine/effects/: Gradient.ts  Rainbow.ts  SolidColor.ts  TheaterChase.ts
Studio/src/hooks/: useClipInteraction.ts  useKeyboardShortcuts.ts  useMenuEvents.ts  usePiStreaming.ts  usePlayback.ts  useProjectFile.ts  useResizableSashes.tsx  useUndoRedo.ts
Studio/src/lib/: buildInfo.ts  gradientUtils.ts  projectSerializer.ts  utils.ts
Studio/src/store/: paletteStore.ts  piStore.ts  playbackStore.ts  preferencesStore.ts  projectStore.ts
Studio/src/utils/: udpSender.ts
(+20 files in other folders)
