[package]
name = "lumina-studio"
version = "0.3.0"
description = "Lumina - LED Animation Sequencer"
authors = ["Navi7468"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "shell-open", "dialog-save", "dialog-open", "fs-read-file", "fs-write-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
